--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -1,15 +1,19 @@
 table { 
   width: 100%;
   border-collapse: collapse;
-  border: 1px solid #333;
+  border: 2px solid #333;
+  box-shadow: 16px 16px 0px #333333;
+  background-color: #ffffff;
 }
 tr:nth-of-type(odd) { 
-  background-color: #efefef;
+  background-color: #f7f7f7;
 }
 th { 
-  background-color: #333;
-  color: white;
+  background-color: #77dd77;
+  color: #333333;
+  text-transform: uppercase;
   font-weight: bold;
+  font-size: 18px
 }
 td, th { 
   padding: 16px;
